# Hermes-3

./: .env.example  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml
config/: agents.yaml  config.yaml  workflows.yaml
docs/: android-mobile.md  frontend-spec.md  teams-setup.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  main.tsx  styles.css
scripts/: build-full-hermes.sh  create-desktop-app.sh  hermes2-launch.sh  install-hermes2ctl.sh
src/hermes2/: __init__.py  approvals.py  cli.py  config.py  env.py  llm.py  mobile.py  models.py  runlog.py  server.py  teams.py  tools.py  workflow.py
src/hermes2/defaults/: __init__.py  config.yaml
tests/: test_approvals.py  test_cli.py  test_config.py  test_llm.py  test_models.py  test_runlog.py  test_server.py  test_workflow.py
